@@ -24396,7 +24396,9 @@ begin
       FConstValuesList.add(opsiserviceClientId);
 
       FConstList.add('%hostID%');
-      FConstValuesList.add(computernaming);
+      if  opsiserviceClientId <> '' then
+        FConstValuesList.add(opsiserviceClientId)
+      else FConstValuesList.add(computernaming);
 
       FConstList.add('%opsiServer%');
 
